--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,17 @@
 *{
     font-family: 'Roboto', sans-serif;
 }
-header{
+/* Обратите внимание на измения для "липкой" шапки, пометил их звездочкой ниже */
+header {
     position: relative;
+    height: 50px; /* * */
 }
-nav{
-   
+nav {
+    position: fixed; /* * */
+    width: 100%; /* * */
     height: 50px;
-    background: #212121; 
+    background-color: #212121;
+    z-index: 2; /* * */
 }
 .menu{
     display: flex;
@@ -30,6 +34,7 @@ color: #FFFFFF;
 }
 .subheader{
     height: 84px;
+    top: 50px; /* * */
     background-color: rgba(0,0,0, .6);  
     position: absolute;
     width: 100%;
