--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,25 +1,24 @@
 *{
     font-family: 'Roboto', sans-serif;
 }
-/* Обратите внимание на измения для "липкой" шапки, пометил их звездочкой ниже */
+
 header {
     position: relative;
-    height: 50px; /* * */
+    height: 50px; 
 }
 nav {
-    position: fixed; /* * */
-    width: 100%; /* * */
+    position: fixed; 
+    width: 100%; 
     height: 50px;
     background-color: #212121;
-    z-index: 2; /* * */
+    z-index: 2; 
 }
 .menu{
     display: flex;
     justify-content: space-between;
     padding: 13px 70px;
     margin: 0;
-    list-style-type: none;
-    
+    list-style-type: none; 
 }
 .menu .menu_link{
 
@@ -34,12 +33,11 @@ color: #FFFFFF;
 }
 .subheader{
     height: 84px;
-    top: 50px; /* * */
+    top: 50px; 
     background-color: rgba(0,0,0, .6);  
     position: absolute;
     width: 100%;
-    /* position: relative;
-    z-index: 2; */
+    
 }
 .subheader .subheader_logo{
     display: block;
@@ -88,8 +86,7 @@ color: #FFFFFF;
     min-height: 800px;
     background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
     padding: 150px 0 135px 0 ;
-    /* transform: translateY(-84px);
-    z-index: 1; */
+    
 }
 .promo .promo_header{
     color:#FFFFFF;
