--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,6 @@
+$main-color: #1eacc7
+$second-color: #ff5656
+    
 *
     font-family: 'Roboto', sans-serif
 
@@ -72,7 +75,7 @@ nav
         box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
         border: none
         border-radius: 4px
-        background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
+        background-image: linear-gradient(to top, $main-color 0%, #4ce2ff 100%)
         text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
         color: #ffffff
         font-size: 14px
@@ -119,7 +122,7 @@ nav
         box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12)
         border: none
         border-radius: 4px
-        background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
+        background-image: linear-gradient(to top, $main-color 0%, #4ce2ff 100%)
         text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
         color: #ffffff
         font-size: 18px
@@ -130,6 +133,7 @@ nav
     padding: 71px 0 65px 0
 
 .label
+    position: relative
     margin: 0 auto
     height: 24px
     width: 112px
@@ -140,8 +144,13 @@ nav
     font-weight: 300
     text-transform: uppercase
     text-align: center
+    z-index: 2
+    &_white
+        background-color: #ffffff
+        color: #000000
 
 .title
+    position: relative
     margin-bottom: 0
     margin-top: 38px
     color: #222222
@@ -149,7 +158,12 @@ nav
     font-weight: 700
     text-transform: uppercase
     text-align: center
+    z-index: 2
+    &_white
+        color: #ffffff
+
 .subtitle
+    position: relative
     margin-top: 19px
     font-style: normal
     font-weight: 400
@@ -157,6 +171,9 @@ nav
     line-height: 21px
     color: #222222
     text-align: center
+    z-index: 2
+    &_white
+        color: #fff
 
 .reasons .reasons_block
     display: flex
@@ -171,7 +188,7 @@ nav
         margin-right: 26px
         width: 113px
         height: 113px
-        background-color: #1eacc7
+        background-color: $main-color 
         border-radius: 100%
 
     .reasons_descr
@@ -179,7 +196,7 @@ nav
 
     .reasons_subtitle
         line-height: 21px
-        color: #1eacc7
+        color: $main-color 
         font-size: 17px
         font-weight: 400
 
@@ -196,8 +213,9 @@ nav
     .row
         margin-top: 32px
     &_item
+        position: relative
         width: 320px
-        height: 200px
+        height: 280px
         margin: 0 auto
         margin-bottom: 19px
         padding-top: 92px
@@ -220,3 +238,42 @@ nav
             line-height: 31px
             text-transform: uppercase
             text-align: center
+        &_plus
+            display: flex
+            justify-content: center
+            align-items: center
+            position: absolute
+            bottom: 35px
+            left: 50%
+            transform: translateX(-50%)
+            width: 26px
+            height: 26px
+            background-color: #000000
+            margin: 0 auto
+            border-radius: 100%
+            cursor: pointer
+.choice
+    position: relative
+    min-height: 898px
+    padding: 57px 0 138px 0
+    background: url('../img/bg/mobile_app.png') center (center / cover) no-repeat
+    
+    &_img
+        position: relative
+        display: block
+        margin: 56px auto 0 auto
+        z-index: 2
+    &_descr
+        text-align: center
+        color: #222222
+        font-size: 17px
+        font-weight: 300
+        line-height: 24px
+    .black
+        position: absolute
+        top: 0
+        left: 0
+        height: 499px
+        width: 100%
+        background-color: #070716
+        z-index: 1
