--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,10 @@
 $main-color: #1eacc7
 $second-color: #ff5656
+
+=btn_hover
+    &:hover
+        background-image: none
+        background-color: $main-color
     
 *
     font-family: 'Roboto', sans-serif
@@ -22,13 +27,13 @@ nav
     margin: 0
     list-style: none
 
-    .menu_link
+    &_link
         font-style: normal
         font-weight: 400
         font-size: 15px
         color: #FFFFFF
 
-    .menu_item
+    &_item
         border-right: 2px dotted black
         padding-right: 28px
 
@@ -39,26 +44,26 @@ nav
     position: absolute
     width: 100%
 
-    .subheader_logo
+    &_logo
         display: block
         max-width: 100%
         margin-top: 16px
 
-    .subheader_official
+    &_official
         margin-top: 6px
         opacity: 0.5
         color: #FFFFFF
         font-size: 13px
         font-weight: 300
 
-    .subheader_call
+    &_call
         color: #FFFFFF
         font-weight: 400
         font-size: 12px
         margin-top: 19px
         text-align: right
 
-    .subheader_phone
+    &_phone
         display: block
         margin-top: 8px
         color: #FFFFFF
@@ -68,7 +73,7 @@ nav
         text-align: right
         line-height: 12px
 
-    .subheader_btn
+    &_btn
         margin-top: 19px
         width: 172px
         height: 46px
@@ -81,13 +86,14 @@ nav
         font-size: 14px
         font-weight: 400
         text-transform: uppercase
+        +btn_hover
 
 .promo
     min-height: 800px
     background: url('../img/bg/main_bg.jpg') center (center / cover) no-repeat
     padding: 150px 0 135px 0
 
-    .promo_header
+    &_header
         color: #FFFFFF
         font-weight: 700
         text-transform: uppercase
@@ -96,7 +102,7 @@ nav
         margin: 0
         text-align: center
 
-    .promo_subheader
+    &_subheader
         font-size: 36px
         color: #FFFFFF
         font-weight: 700
@@ -106,7 +112,7 @@ nav
         margin-top: 22px
         text-align: center
 
-    .promo_descr
+    &_descr
         color: #ffffff
         font-size: 18px
         font-weight: 400
@@ -114,7 +120,7 @@ nav
         text-align: center
         margin-top: 23px
 
-    .promo_btn
+    &_btn
         display: block
         margin: 118px auto 0 auto
         width: 259px
@@ -128,6 +134,8 @@ nav
         font-size: 18px
         font-weight: 400
         text-transform: uppercase
+        +btn_hover
+
 
 .reasons
     padding: 71px 0 65px 0
@@ -175,13 +183,14 @@ nav
     &_white
         color: #fff
 
-.reasons .reasons_block
-    display: flex
-    justify-content: center
-    align-items: center
-    margin-top: 35px
+.reasons 
+    &_block
+        display: flex
+        justify-content: center
+        align-items: center
+        margin-top: 35px
 
-    .reasons_round
+    &_round
         display: flex
         justify-content: center
         align-items: center
@@ -191,16 +200,16 @@ nav
         background-color: $main-color 
         border-radius: 100%
 
-    .reasons_descr
+    &_descr
         width: 343px
 
-    .reasons_subtitle
+    &_subtitle
         line-height: 21px
         color: $main-color 
         font-size: 17px
         font-weight: 400
 
-    .reasons_text
+    &_text
         color: #202020
         font-size: 15px
         font-weight: 300
@@ -252,6 +261,27 @@ nav
             margin: 0 auto
             border-radius: 100%
             cursor: pointer
+            &:before
+                content: ''
+                display: block
+                width: 14px
+                height: 2px
+                background-color: $main-color
+                transition: 0.3s all
+            &::after
+                content: ''
+                position: absolute
+                left: 50%
+                transform: translateX(-50%)
+                display: block
+                width: 2px
+                height: 14px
+                background-color: $main-color
+                transition: 0.3s all
+            &:hover
+                &:before, &::after
+                    background-color: $second-color
+                
 .choice
     position: relative
     min-height: 898px
@@ -277,3 +307,39 @@ nav
         width: 100%
         background-color: #070716
         z-index: 1
+
+.require
+    padding: 68px 0 84px 0
+    &_block
+        margin: 33px 0
+        &_nmb
+            margin-bottom: 0px
+    &_title
+        color: #1ca8c3
+        font-size: 22px
+        font-weight: 400
+    &_list
+        list-style-type: none
+        padding-left: 50px
+        margin-top: 22px
+        li
+            position: relative
+            font-size: 17px
+            font-weight: 300
+            line-height: 24px
+            margin-bottom: 10px
+            &:before
+                content: ''
+                display: block
+                position: absolute
+                left: -32px
+                top: 3px
+                width: 21px
+                height: 20px
+                background: url('../icons/check_blue.svg') center (center / cover) no-repeat
+
+
+
+    
+
+
