--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -337,8 +337,19 @@ nav
                 width: 21px
                 height: 20px
                 background: url('../icons/check_blue.svg') center (center / cover) no-repeat
-
-
+    &_descr
+        margin-top: 25px
+        font-size: 17px
+        font-weight: 300
+        line-height: 24px
+        color: #1ca8c3
+    .warning
+        .require_title
+            color: $second-color
+        .require_list
+            li
+                &:before
+                    background: url('../icons/check_red.png') center (center / cover) no-repeat
 
     
 
