--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -83,9 +83,9 @@
             display: flex
             justify-content: center
             margin-bottom: 20px
-            &_nth-child(1)
+            &:nth-child(1)
                 width: 100%
-            &_nth-child(3)
+            &:nth-child(3)
                 width: 100%
                 justify-content: center
 @media (max-width: 767px)
@@ -122,7 +122,7 @@
         span
             display: block
             height: 2px
-            width: 100px
+            width: 100%
             background-color: #fff
             margin-bottom: 2px
             transition: 0.5s all
