fixed bug in html

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -424,5 +424,5 @@ nav
             margin-top: 19px
             text-transform: uppercase
             text-align: center
-
-    &_mobile
+.xs-visible
+    display: none
